--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.2",
         "react-dom": "^18.2.0",
+        "react-query": "^3.39.3",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.10.0",
         "styled-components": "^5.3.9"
